--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -11,7 +11,7 @@ categories = ["date-and-time"]
 readme = "README.md"
 
 [dependencies]
+byte-slice-cast = "1.2.0"
 once_cell = { version = "1.9.0", features = ["parking_lot", "race"] }
 phf = "0.10.1"
-tinystr = "0.5.0"
 tz-rs = "0.5.3"
