--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -12,4 +12,6 @@ anyhow = "1.0.55"
 convert_case = "0.5.0"
 itertools = "0.10.3"
 phf_codegen = "0.10.0"
-tz-rs = "0.5.3"
+ron = "0.7.0"
+serde = { version = "1.0.136", features = ["derive"] }
+tz-rs = "0.6.0"
