--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Cache
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-check-${{ steps.actions-rs.outputs.rustc }}-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-check-${{ steps.actions-rs.outputs.rustc }}-
+          key: ${{ runner.os }}-check-${{ steps.actions-rs.outputs.rustc_hash }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-check-${{ steps.actions-rs.outputs.rustc_hash }}-
           path: |
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
@@ -96,8 +96,8 @@ jobs:
       - name: Cache
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-test-${{ steps.actions-rs.outputs.rustc }}-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-test-${{ steps.actions-rs.outputs.rustc }}-
+          key: ${{ runner.os }}-test-${{ steps.actions-rs.outputs.rustc_hash }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-test-${{ steps.actions-rs.outputs.rustc_hash }}-
           path: |
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
@@ -105,6 +105,37 @@ jobs:
             target/
 
       - run: cargo test --workspace --all-targets
+
+  doc:
+    name: "Documentation"
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+
+      - name: Install Rust
+        id: actions-rs
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: ${{ runner.os }}-doc-${{ steps.actions-rs.outputs.rustc_hash }}-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-doc-${{ steps.actions-rs.outputs.rustc_hash }}-
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+
+      - run: cargo doc --package tzdb --features docsrs
 
   audit:
     runs-on: ubuntu-latest
