--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         toolchain:
-          - "1.56"
+          - "1.57"
           - stable
           - nightly
 
@@ -72,7 +72,7 @@ jobs:
     strategy:
       matrix:
         toolchain:
-          - "1.56"
+          - "1.57"
           - stable
           - nightly
 
@@ -105,3 +105,30 @@ jobs:
             target/
 
       - run: cargo test --workspace --all-targets
+
+  audit:
+    runs-on: ubuntu-latest
+
+    name: "Cargo audit"
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          lfs: true
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: ${{ runner.os }}-audit-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-audit-
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+
+      - name: Audit
+        uses: actions-rs/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
