--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -10,5 +10,6 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 anyhow = "1.0.54"
 convert_case = "0.5.0"
+itertools = "0.10.3"
 phf_codegen = "0.10.0"
 tz-rs = "0.5.3"
