--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -18,16 +18,20 @@ tz-rs = "0.5.3"
 # optional dependencies
 byte-slice-cast = { version = "1.2.0", optional = true }
 document-features = { version = "=0.2.1", optional = true }
+iana-time-zone = { version = "0.1.28", optional = true }
 phf = { version = "0.10.1", optional = true }
 
 [features]
-default = ["by-name", "list"]
+default = ["by-name", "list", "local"]
 ## enables [TimeZoneExt::from_db()]
 ##
 by-name = ["phf", "byte-slice-cast"]
 ## enables [TimeZoneExt::names_in_db()]
 ##
 list = []
+## enables [TimeZoneExt::local_from_db()]
+##
+local = ["by-name", "iana-time-zone"]
 
 # Internal feature, used when generating docs. *You* are not supposed to enable this feature!
 docsrs = ["document-features", "default"]
