--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -8,7 +8,7 @@ description = "Tool to generate `tzdb/src/generated.rs`"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-tz-rs = { git = "https://github.com/x-hgg-x/tz-rs.git", branch = "statics" }
+tz-rs = { git = "https://github.com/x-hgg-x/tz-rs.git", branch = "master" }
 
 anyhow = "1.0.55"
 convert_case = "0.5.0"
