--- a/make-tzdb/Cargo.toml
+++ b/make-tzdb/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 anyhow = "1.0.55"
 convert_case = "0.5.0"
+indexmap = "1.8.0"
 itertools = "0.10.3"
 phf_codegen = "0.10.0"
 ron = "0.7.0"
