Make `v0.1.*` re-export `v0.2.*`

--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -2,9 +2,9 @@ name: DevSkim
 
 on:
   push:
-    branches: [ main ]
+    branches: ['main', 'v0.1.x']
   pull_request:
-    branches: [ main ]
+    branches: ['main', 'v0.1.x']
   schedule:
     - cron: '24 14 * * 5'
 
