--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'v0.1.x']
   pull_request:
-    branches: ['main']
+    branches: ['main', 'v0.1.x']
   schedule:
     - cron: "58 7 * * 3"
 
@@ -116,39 +116,6 @@ jobs:
 
       - name: Test
         run: cargo test --workspace --all-targets --features testing -- --show-output
-
-  doc:
-    name: "Documentation"
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          lfs: true
-
-      - name: Install Rust
-        id: actions-rs
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          key: ${{ runner.os }}-doc-${{ steps.actions-rs.outputs.rustc_hash }}-${{ hashFiles('Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-doc-${{ steps.actions-rs.outputs.rustc_hash }}-
-            ${{ runner.os }}-doc-
-          path: |
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-
-      - run: cargo doc --package tzdb --features docsrs --all-features
 
   audit:
     runs-on: ubuntu-latest
