--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -12,13 +12,11 @@ readme = "README.md"
 rust-version = "1.57"
 
 [dependencies]
-tz-rs = "0.6.4"
+tz-rs = "0.6.5"
+tzdb_0_2 = { package = "tzdb", version = "0.2.0" }
 
 # optional dependencies
-byte-slice-cast = { version = "1.2.1", optional = true }
 document-features = { version = "=0.2.1", optional = true }
-iana-time-zone = { version = "0.1.30", optional = true }
-phf = { version = "0.10.1", optional = true }
 serde = { version = "1.0.136", default-features = false, optional = true }
 serde_with = { version = "1.12.0", default-features = false, optional = true }
 
@@ -29,16 +27,16 @@ serde_json = "1.0.79"
 default = ["by-name", "list", "local"]
 ## enables [TimeZoneExt::from_db()] to get a time zone at runtime by name
 ##
-by-name = ["phf", "byte-slice-cast"]
+by-name = ["tzdb_0_2/by-name"]
 ## enables [TimeZoneExt::names_in_db()] to get a list of all shipped time zones
 ##
-list = []
+list = ["tzdb_0_2/list"]
 ## enables [TimeZoneExt::local_from_db()] to get the system time zone
 ##
-local = ["by-name", "iana-time-zone"]
+local = ["tzdb_0_2/local", "by-name"]
 ## enables [serde_as] to (de)serialize (Utc)DateTimes with [serde][::serde]
 ##
-serde-as = ["serde", "serde_with"]
+serde-as = ["tzdb_0_2/serde-as"]
 
 # Internal feature, used when generating docs. *You* are not supposed to enable this feature!
 docsrs = ["document-features", "testing"]
