--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'v0.1.x']
   pull_request:
-    branches: ['main']
+    branches: ['main', 'v0.1.x']
   schedule:
     - cron: "58 7 * * 3"
 
