--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -12,14 +12,14 @@ readme = "README.md"
 rust-version = "1.57"
 
 [dependencies]
-tz-rs = "0.6.7"
+tz-rs = { version = "0.6.9", features = ["const"] }
 
 # optional dependencies
 byte-slice-cast = { version = "1.2.1", optional = true }
-iana-time-zone = { version = "0.1.31", optional = true }
+iana-time-zone = { version = "0.1.33", optional = true }
 phf = { version = "0.10.1", optional = true }
 serde = { version = "1.0.136", default-features = false, optional = true }
-serde_with = { version = "1.12.0", default-features = false, optional = true }
+serde_with = { version = "1.12.1", default-features = false, optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.79"
