--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,27 @@ jobs:
       - name: Test
         run: cargo test --workspace --all-targets --features testing -- --show-output
 
+  minimum-versions:
+    name: "Minimal versions"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: minimum-versions
+          toolchain: nightly
+
+      - name: Update lockfile
+        run: cd tzdb && cargo generate-lockfile -Zminimal-versions
+
+      - name: Test
+        run: cd tzdb && cargo test --all-targets --features testing -- --show-output
+
   miri:
     name: "Miri"
     runs-on: ubuntu-latest
