--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tzdb"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
@@ -12,15 +12,15 @@ readme = "README.md"
 rust-version = "1.57"
 
 [dependencies]
-tz-rs = { version = "0.6.9", features = ["const"] }
+tz-rs = { version = "^0.6.10", features = ["const"] }
 
 # optional dependencies
-byte-slice-cast = { version = "=1", optional = true }
-iana-time-zone = { version = "=0.1", optional = true }
-phf = { version = "=0.10", optional = true }
-phf_shared = { version = "=0.10", optional = true }
-serde = { version = "=1", default-features = false, optional = true }
-serde_with = { version = "=1", default-features = false, optional = true }
+byte-slice-cast = { version = "^1.0.0", optional = true }
+iana-time-zone = { version = "^0.1.0", optional = true }
+phf = { version = "^0.10.0", optional = true }
+phf_shared = { version = "^0.10.0", optional = true }
+serde = { version = "^1.0.51", default-features = false, optional = true }
+serde_with = { version = "^1.5.0", default-features = false, optional = true }
 
 [dev-dependencies]
 serde_json = "=1"
