--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tzdb"
 version = "0.2.7"
-edition = "2021"
+edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
 description = "Static time zone information for tz-rs"
@@ -9,10 +9,10 @@ license = "Apache-2.0"
 keywords = ["date", "time", "timezone", "zone", "calendar"]
 categories = ["date-and-time"]
 readme = "README.md"
-rust-version = "1.57"
+#rust-version = "1.55"
 
 [dependencies]
-tz-rs = { version = "^0.6.10", features = ["const"] }
+tz-rs = { version = "^0.6.10", features = ["const"], git = "https://github.com/Kijewski/tz-rs", branch = "pr-1_55" }
 
 # optional dependencies
 byte-slice-cast = { version = "^1.0.0", optional = true }
