--- a/tzdb/Cargo.toml
+++ b/tzdb/Cargo.toml
@@ -24,6 +24,8 @@ serde_with = { version = "^1.5.0", default-features = false, optional = true }
 
 [dev-dependencies]
 serde_json = "=1"
+proptest = "=1"
+test-strategy = "=0.2"
 
 [features]
 default = ["by-name", "list", "local"]
