--- a/.github/actions/setup-rust/action.yaml
+++ b/.github/actions/setup-rust/action.yaml
@@ -15,22 +15,47 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions-rs/toolchain@v1
+    - name: Remove rustfmt
+      run: rm -f ~/.cargo/bin/rustfmt ~/.cargo/bin/cargo-fmt
+      shell: bash
+
+    - name: Rustup Cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.rustup/downloads
+          ~/.rustup/toolchains
+          ~/.rustup/update-hashes
+        key: v3-rustup-${{ runner.os }}
+
+    - name: Install Toolchain
+      uses: actions-rs/toolchain@v1
       id: toolchain-install
       with:
         profile: minimal
         override: true
         toolchain: ${{ inputs.toolchain }}
-        components: ${{ inputs.components }}  
-    - uses: actions/cache@v3
+        components: ${{ inputs.components }}
+
+    - name: Update self
+      run: rustup self update || true
+      shell: bash
+
+    - name: Update
+      run: rustup update || true
+      shell: bash
+
+    - name: Build Cache
+      uses: actions/cache@v3
       with:
         path: |
           ~/.cargo/registry/index/
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
+          ~/.cargo/bin/
           target/
         key: |
-          ${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-${{ steps.toolchain-install.outputs.rustc_hash }}-${{ hashFiles('**/Cargo.toml', 'Cargo.lock') }}
+          v3-${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-${{ steps.toolchain-install.outputs.rustc_hash }}-${{ hashFiles('Cargo.toml', 'Cargo.lock') }}
         restore-keys: |
-          ${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-${{ steps.toolchain-install.outputs.rustc_hash }}-
-          ${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-
+          v3-${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-${{ steps.toolchain-install.outputs.rustc_hash }}-
+          v3-${{ inputs.key }}-${{ runner.os }}-${{ inputs.toolchain }}-
