--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,10 +50,10 @@ jobs:
           components: clippy
 
       - name: Check
-        run: cargo +${{ matrix.toolchain }} check --workspace --all-targets --features testing
+        run: cargo +${{ matrix.toolchain }} check --workspace --all-targets
 
       - name: Lint
-        run: cargo +${{ matrix.toolchain }} clippy --workspace --all-targets --features testing -- -D warnings
+        run: cargo +${{ matrix.toolchain }} clippy --workspace --all-targets -- -D warnings
 
   test:
     strategy:
@@ -82,7 +82,7 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
 
       - name: Test
-        run: cargo +${{ matrix.toolchain }} test --workspace --all-targets --features testing -- --show-output
+        run: cargo +${{ matrix.toolchain }} test --workspace --all-targets -- --show-output
 
   minimum-versions:
     name: "Minimal versions"
@@ -103,7 +103,7 @@ jobs:
         run: cargo generate-lockfile -Zminimal-versions
 
       - name: Test
-        run: cargo +nightly test --all-targets --features testing -- --show-output
+        run: cargo +nightly test --all-targets -- --show-output
 
   miri:
     name: "Miri"
@@ -122,7 +122,7 @@ jobs:
           components: miri
 
       - name: Test
-        run: cargo +nightly miri test --workspace --all-targets --features testing -- --show-output
+        run: cargo +nightly miri test --workspace --all-targets -- --show-output
 
   doc:
     name: "Documentation"
@@ -140,7 +140,7 @@ jobs:
           toolchain: nightly
           components: rust-docs
 
-      - run: cargo +nightly doc --package tzdb --features docsrs --all-features
+      - run: RUSTDOCFLAGS="-D warnings" cargo +nightly doc --package tzdb --features docsrs --all-features --no-deps
 
   audit:
     name: "Cargo audit"
@@ -162,3 +162,24 @@ jobs:
         uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  powerset:
+    name: "Feature powerset"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          lfs: true
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+        with:
+          key: powerset
+          toolchain: stable
+
+      - name: Install hack
+        run: cargo +stable install cargo-hack --force
+
+      - name: Powerset
+        run: cargo +stable hack test --feature-powerset --exclude-features docsrs --ignore-private --tests --lib
