--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tzdb"
 version = "0.3.0"
-edition = "2021"
+edition = "2018"
 authors = ["René Kijewski <crates.io@k6i.de>"]
 repository = "https://github.com/Kijewski/tzdb"
 description = "Static time zone information for tz-rs"
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 keywords = ["date", "time", "timezone", "zone", "calendar"]
 categories = ["date-and-time"]
 readme = "README.md"
-rust-version = "1.57"
+#rust-version = "1.55"
 
 [dependencies]
 tz-rs = { version = "^0.6.11", features = ["const"] }
@@ -22,7 +22,8 @@ phf_shared = { version = "^0.10.0", optional = true }
 
 [dev-dependencies]
 proptest = "=1"
-test-strategy = "=0.2"
+test-strategy = "=0.1.2"
+structmeta = "=0.1.4"
 
 [features]
 default = ["by-name", "list", "local"]
