--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ tz-rs = { version = "^0.6.11", features = ["const"] }
 # optional dependencies
 byte-slice-cast = { version = "^1.0.0", optional = true }
 iana-time-zone = { version = "^0.1.35", optional = true }
-phf = { version = "^0.10.0", optional = true }
-phf_shared = { version = "^0.10.0", optional = true }
+phf = { version = "^0.10.0", default-features = false, optional = true }
+phf_shared = { version = "^0.10.0", default-features = false, optional = true }
 
 [dev-dependencies]
 proptest = "=1"
